fixes for section level learning objectives, bulleted lists, and  table spacing

--- a/css/ccap-economics.less
+++ b/css/ccap-economics.less
@@ -227,18 +227,8 @@
 * -------------------------
 */
 
-// This must be turned off from PreCalculus since Economics 
-// doesn't use section level learning objectives, only Chapter level
-.section > .titlepage {
-  .abstract { display: none; }
-}
-
-
-/* Save this section in case the deciscion is to revert to aggregated modules in Chapter Outline
-   and utilize section level learning objectives
 .section > .titlepage {
   .abstract {
-    counter-reset: learning-objectives;
     border: none;
 
     // For Economics there is no blue header/background or border box. Just a simple list
@@ -246,26 +236,19 @@
       display: none;
     }
 
-
-    p { font-family: @font-family; margin: 1em 0em .75em 1em; }
-
-    .itemizedlist > .listitem > p { margin: 0em .3em; display: inline-block; }
-
-
-    // Special three-part numbering for Learning Objective chapter.section.learning-objectives
+    // Economics doesn't need a counter for modules to display like PreCalculus - turning off
     .itemizedlist > .listitem {
-      counter-increment: learning-objectives;
-      display: block;
 
-      // Economics doesn't need a counter for modules to be displaying like PreCalculus - turning off
+      // PreCalc uses display:block to remove bullets and utilize list as block with counters
+      // For Economics we need just garden variety bullets for list.  
+      display: disc;
+
       &::before {
         display: none;
       }
     }
   }
 }
-*/
-
 
 
 
@@ -354,6 +337,7 @@ blockquote {
     // font added here so down cascade table captions will render well inside eoc question sections
     font-family: @font-family;
     color: @dark-blue;
+    padding-bottom: 0;
   }
 
   thead {
@@ -443,6 +427,15 @@ blockquote {
       padding-top: .2em;
     }
   }
+}
+
+// Glossary Term and Non-bolded Glossary Term
+.glossary .glossterm {
+  font: normal normal 700 10pt/13pt @font-family-serif;
+}
+
+.glossterm.no-emphasis {
+  font-weight: 400;
 }
 
 .cnx-eoc {
@@ -596,13 +589,6 @@ div.colophon.end-of-book-solutions div.chapter-area {
     * being used in ccap-precalculus.less.
     */
     > div.body {
-
-      .figure { 
-      
-      }
-
-      .figure > .title { border: 1px solid red; }
-
       // lists must not be inline 
       li { display: list-item; }
       
